log
Thu 04 May 2023 11:05:22 PM UTC: 
 tests:  0|5
total_score: 0/70
177eaac
Thu 04 May 2023 11:12:15 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:60:23: error: iteration 8 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   60 |       new->sudo[i][j] = num;
      |       ~~~~~~~~~~~~~~~~^~~~~
sudoku.c:58:24: note: within this loop
   58 |     for (int j = 1 ; j < 10 ; j++){
      |                      ~~^~~~
cc1: all warnings being treated as errors
Compilation failed
37b9316
Thu 04 May 2023 11:12:49 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
a9708e6
Thu 04 May 2023 11:18:49 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:26: error: comparison between pointer and integer [-Werror]
   59 |       if(new->sudo[i][j] == NULL){
      |                          ^~
sudoku.c:65:9: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   65 |         if(num == 10) num = 1; return list;
      |         ^~
sudoku.c:65:32: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   65 |         if(num == 10) num = 1; return list;
      |                                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
b021f21
Thu 04 May 2023 11:22:06 PM UTC: 
 sudoku.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:59:26: error: comparison between pointer and integer [-Werror]
   59 |       if(new->sudo[i][j] == NULL){
      |                          ^~
cc1: all warnings being treated as errors
Compilation failed
c6a544e
Thu 04 May 2023 11:23:38 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b7e7810
